--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "electron-main.js",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "electron": "electron .",
     "dist": "npm run build && electron-builder"
